--- a/gameStyle.css
+++ b/gameStyle.css
@@ -1,13 +1,83 @@
+
+
 head {
     font-family: 'Piedra', cursive;
+  
+}
+
+h3{
+    background: black;
+    padding: 10px;
+    border-radius: 30px;
 }
 
 body {
     font-family: 'Piedra', cursive;
+    /* background-image: url(./imagens_jogo_a20/cavernaSombria.jpg); */
+    background-repeat: no-repeat;*/
+    background-size: auto;
+    height:548px; 
+    width:980px;
+    /* padding-left:10%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    }
+    
+
+
+header{
+    /* padding-top: 25px; */
+    /* padding-bottom: 40px; */
+    font-size: 70px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    color: rgb(34, 34, 34);
+}
+
+
+
+main {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 70px;
+    padding-right: 70px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+   
     
 }
 
-#background {
-    background-image: url(/imagens_jogoa20/cavernaSombria.jpg);
-    image-size: 100%;
+p {
+    font-size: 18px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    background-color: rgb(47, 47, 47);
+    border: 1px solid;
+    padding:20px;
+    border-radius: 10px;
+}
+.escolhas {
+    padding-top:20px;
+    display: flex;
+    align-content: center;
+    text-align: center;
+    font-size: 36px;
+}
+footer {
+    padding-top:0px;
+    display:block;
+    text-align: center;
+    color: rgb(255, 251, 2);
+}
+
+.background {
+    display: flex;
+    justify-content: center;
 }
