--- a/gameStyle.css
+++ b/gameStyle.css
@@ -13,8 +13,8 @@ h3{
 
 body {
     font-family: 'Piedra', cursive;
-    /* background-image: url(./imagens_jogo_a20/cavernaSombria.jpg); */
-    background-repeat: no-repeat;*/
+    background-image: url('./imagens_jogo_a20/cavernaSombria.jpg');
+    background-repeat: no-repeat;
     background-size: auto;
     height:548px; 
     width:980px;
@@ -61,7 +61,7 @@ p {
     background-color: rgb(47, 47, 47);
     border: 1px solid;
     padding:20px;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 .escolhas {
     padding-top:20px;
@@ -80,4 +80,14 @@ footer {
 .background {
     display: flex;
     justify-content: center;
+}
+
+.bt {
+    color:rgb(255, 255, 255);
+    background-color:grey;
+    border-radius: 10px;
+    border: 1px solid whitesmoke;
+    margin: 10px;
+    padding: 10px;
+
 }
